configuration_examples/postgres-example/configmap.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-api-postgres
