configuration_examples/postgres-example/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-api
  namespace: frontend-api-postgres
spec:
  podSelector:
    matchLabels:
      app: webapp
      tier: api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: webapp
              tier: frontend
      ports:
        - protocol: TCP
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-to-postgres
  namespace: frontend-api-postgres
spec:
  podSelector:
    matchLabels:
      app: webapp
      tier: database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: webapp
              tier: api
      ports:
        - protocol: TCP
          port: 5432
